--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,7 +135,7 @@
 
 @layer components {
 	.code-block {
-		@apply my-6 rounded-lg bg-gray-900 dark:bg-black/70 overflow-hidden shadow-lg relative;
+		@apply my-6 rounded-lg bg-gray-900 dark:bg-black/70 shadow-lg relative overflow-auto w-[calc(100%-16px)];
 	}
 	.code-block-header {
 		@apply flex items-center justify-between px-4 py-2 border-b border-gray-700;
